syntax = "proto3";

package service;

option go_package = ".;pb";

service Greeter {
    rpc SayHello (HelloRequest) returns (HelloReply) {}
    rpc HelloStream (stream HelloRequest) returns (stream HelloReply) {}
}

message HelloRequest {
    string name = 1;
}

message HelloReply {
    string message = 1;
}